GenericSetup Product Changelog

  GenericSetup 1.1 (unreleased)

   - getExportStepRegistry had the wrong security declaration

  GenericSetup 1.1-beta2 (2006/03/26)

    No changes - tag created to coincide with CMF 2.0.0-beta2


  GenericSetup 1.1-beta (2006/03/08)

    - Allowed subclasses of DAVAwareFileAdapter to override the filename
      in which the file is stored.

    - Added a doc directory including some basic documentation.

    - Made GenericSetup a standalone package independent of the CMF

    - Added 'for_' argument to profile registry operations.
      A profile may be registered and queried as appropriate to a specific
      site interface;  the default value, 'None', indicates that the profile
      is relevant to any site.  Note that this is essentially an adapter
      lookup;  perhaps we should reimplement it so.

    - Forward ported changes from GenericSetup 0.11 and 0.12 (which were
      created in a separate repository).

    - A sequence property with the purge="False" attribute will not be
      purged, but merged (the sequences are treated as sets, which means
      that duplicates are removed). This is useful in extension profiles.

    - Don't export or purge read-only properties. Correctly purge
      non-deletable int/float properties.

    - Correctly quote XML on export.

  GenericSetup 1.0 (2005/09/23)

    - CVS tag:  GenericSetup-1_0

    - Forward-ported i18n support from CMF 1.5 branch.

    - Forward ported BBB for old instances that stored properties as
      lists from CMFSetup.

    - Forward ported fix for tools with non unique IDs from CMFSetup.

  GenericSetup-0.12 (2005/08/29)

    - CVS tag:  GenericSetup-0_12

    - Import requests now create reports (by default) which record any
      status messages generated by the profile's steps.

  GenericSetup-0.11 (2005/08/23)

    - CVS tag:  GenericSetup-0_11

    - Added report of messages generated by import to the "Import" tab.
